5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1630_2939.log
== TEST (2019-04-02 16:15:26) 
-- CODE:
 l = int(round ("l"))
e = int(input("e"))
f = (int(input("f"))
-- ERROR:
File "XXXX", line 1
    l = int(round ("l"))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:33) 
-- CODE:
l = int(round ("l"))
e = int(input("e"))
f = (int(input("f"))
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:35) 
-- CODE:
l = int(round ("l"))
e = int(input("e"))
f = (int(input("f"))
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
